# seismo-sbi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: azores_inversion.ipynb  cps_exploration.ipynb  theory_errors_LV2.ipynb
examples/configs/: LV2.yaml  LV2_station_shifts.json  model_perturbations.yaml  stations.txt
scripts/: constants.py  custom_download.py  custom_multi_CPS_perturbations.py  custom_preprocess.py  download.py  download_resp.py  event_MLE.py  event_inversion.py  generate_CPS_perturbations.py  generate_noise_dataset.py  multi_CPS_perturbations.py  network_station_codes.txt  train_NPE.py
scripts/configs/azores/: azores_components.json  azores_event.yaml  azores_stations.txt  fixed_loc_azores_event.yaml
scripts/configs/indo_pacific/: IEB_export.csv  components.json  components_noGSI.json  components_talaud2.json  components_talaud3.json  fixed_banda.yaml  fixed_java.yaml  fixed_mariana.yaml  fixed_papau.yaml  fixed_talaud.yaml  fixed_talaud2.yaml  fixed_talaud3.yaml  java.yaml  papau.yaml  stations.txt  talaud2.yaml  talaud3.yaml
scripts/configs/long_valley/: components.json  stations.txt
seismo-sbi/notebooks/: test.py  utils.py
seismo-sbi/scripts/: constants.py  download.py  generate_covarge_tests_tarp.py  jupyter.sh  nohup.out  sbi_inversions.py  sbi_pipeline.py
seismo-sbi/setup/: requirements.txt
seismo-sbi/src/data_handling/: noise_collection.py  noise_database.py
seismo-sbi/src/instaseis_simulator/: dataloader.py  dataset_generator.py  simulation_saver.py  simulator.py
seismo-sbi/test/: run_tests.py
(+85 files in other folders)
