[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seismo-sbi"
version = "0.0.1"
authors = [{ name="Alex Saoulis", email="a.saoulis@ucl.ac.uk" }]
description = "Simulation-based inference for seismic source inversion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dynamic= ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}